unitryhards/myapp/static/css/style.css
/* Κεντράρισμα του login container */
.login-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh; /* Ύψος ίσο με το ύψος της οθόνης */
    margin: 0;
  }
  
  .login-box {
    background: #fff;
    padding: 30px;
    border-radius: 12px;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
    width: 350px; /* Μειώσαμε το πλάτος του login box */
    text-align: center;
    margin: 0 auto;
    height: 400px; /* Προσθήκη ύψους για το box */
  }
  
  /* Στυλ για τον τίτλο */
  h2 {
    margin-bottom: 20px;
    color: #333;
    font-size: 24px;
  }
  
  /* Στυλ για τα πεδία εισαγωγής */
  input[type="text"], input[type="password"] {
    width: 100%;
    padding: 12px;
    margin: 8px 0;
    border-radius: 4px;
    border: 1px solid #ccc;
    box-sizing: border-box; /* Για να υπολογίζεται σωστά το padding */
  }
  
  /* Στυλ για το κουμπί Login */
  button[type="submit"] {
    background-color: #4CAF50;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    width: 100%;
  }
  
  button[type="submit"]:hover {
    background-color: #45a049;
  }
  
  p {
    margin-top: 10px;
  }
  
  a {
    text-decoration: none;
    color: #4CAF50;
  }
  
  a:hover {
    text-decoration: underline;
  }  

